--- a/package.json
+++ b/package.json
@@ -15,10 +15,15 @@
     "babel-core": "^6.26.3",
     "babel-loader": "^8.0.6",
     "babel-plugin-transform-class-properties": "^6.24.1",
+    "css-loader": "^3.2.1",
     "live-server": "^1.2.1",
+    "node-sass": "^4.13.0",
+    "normalize.css": "^8.0.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-modal": "^3.11.1",
+    "sass-loader": "^8.0.0",
+    "style-loader": "^1.0.1",
     "validator": "^12.1.0",
     "webpack": "^4.41.2",
     "webpack-dev-server": "^3.9.0"
